--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Flashcard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="icon" href="/iconcha.png">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='10' y='20' width='100' height='80' rx='26' fill='%23007bff'/%3E%3Crect x='25' y='35' width='70' height='50' rx='12' fill='white'/%3E%3Crect x='35' y='45' width='50' height='8' rx='4' fill='%23007bff' opacity='0.15'/%3E%3Crect x='35' y='60' width='30' height='8' rx='4' fill='%23007bff' opacity='0.15'/%3E%3C/svg%3E">
   <style>
     body {
       background-color: #e6f2ff;
